--- a/angular.json
+++ b/angular.json
@@ -114,6 +114,9 @@
                             "devServerTarget": "triqui-angular:serve:production"
                         }
                     }
+                },
+                "deploy": {
+                    "builder": "angular-cli-ghpages:deploy"
                 }
             }
         }
